[feature/feature_designupdate_zth] Fixed button align

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -96,8 +96,9 @@ a {
 }
 
 .sm-btn {
-  padding: 5px 10px;
+  padding: 3px 10px;
   font-size: 10px;
+  display: inline-table;
 }
 
 /* ------------------------Error Msg------------------ -------- */
